--- a/app/views/notifications_mailer/new.html.erb
+++ b/app/views/notifications_mailer/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row-fluid">
-    <div class="col-md-4 about-us">
+    <div class="col-md-6 col-lg-6 about-us">
       <br />
       <h2>About us</h2>
       <%= render partial: 'shared/about_us' %>
@@ -10,7 +10,7 @@
       <br />
   </div>
 
-  <div class="col-md-4 about-us">
+  <div class="col-md-5 about-us">
     <br />
     <h2>Contact us</h2>
 
