--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
   <div class="row-fluid">
-    <div class="col-md-6 about-us">
+    <div class="col-md-10 col-lg-10 about-us">
       <br />
       <h2>FAQ</h2>
       <strong>What is this site?</strong><br />
