Fix the style of title

--- a/app/views/target_images/_convnet_images.html.erb
+++ b/app/views/target_images/_convnet_images.html.erb
@@ -28,9 +28,9 @@
         <br />
       </div>
       <div class="title">
-          <%= image[:image].title.to_s %><br />
+          <%= image[:image].title.to_s %>
           <div class="time-string">
-            <br /><%= "PA: #{get_jst_string(image[:image].posted_at)}" %>
+            <%= "PA: #{get_jst_string(image[:image].posted_at)}" %>
           </div>
         </div>
     </div>-->
