--- a/app/views/users/boards.html.erb
+++ b/app/views/users/boards.html.erb
@@ -34,9 +34,9 @@
         <br />
       </div>
       <div class="title">
-          <%= favored_image.title.to_s %><br />
+          <%= favored_image.title.to_s %>
           <div class="time-string">
-            <br /><%= "PA: #{get_jst_string(favored_image.posted_at)}" %>
+            <%= "PA: #{get_jst_string(favored_image.posted_at)}" %>
           </div>
         </div>
     </div>
