--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -2,6 +2,8 @@
 //  Classes for image alignment
 // =============================
 
+@import "_colors";
+
 .block {
   position: absolute;
   width: 300px;
@@ -68,16 +70,16 @@ body {
 }
 .title {
   width: 300px;
-  text-align: center;
+  line-height: 1.2;
+  font-size: 14px;
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
   margin-bottom: 0px;
-  background: #000;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba($base-dark, 0.5);
   color: #FFF;
-  padding: 10px;
+  padding: 5px 7px;
 }
 body.no-touch .block:hover .titleBox, body.touch .block.touchFocus .titleBox {
    margin-bottom: 0;
