--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -15,11 +15,9 @@
 // Style the format of time inside a titleBox div
 .time-string {
   font-size: 10px;
-  line-height: 10px;
+  line-height: 1.2;
   text-align: right;
-  align: right;
-  float: right;
-  width: 200px;
+  margin-top: 3px;
 }
 // for home_debug action
 .time-string-debug {
