--- a/app/views/users/_home_images.html.erb
+++ b/app/views/users/_home_images.html.erb
@@ -24,9 +24,9 @@
       <!-- Add another anchor to the modal as it gets unclickable when thumbnail's height is to short -->
       <%= link_to ({ controller: 'images', action: 'show', id: image.id.to_s, remote: true, 'data-toggle' => "modal", 'data-target' => '#modal-image' }) do %>
         <div class="title">
-          <%= image.title.to_s %><br />
+          <%= image.title.to_s %>
           <div class="time-string">
-            <br /><%= "Posted at: #{get_jst_string(image.posted_at)}" %>
+            <%= "Posted at: #{get_jst_string(image.posted_at)}" %>
           </div>
         </div>
       <% end %>
