Add headers to the main pages

--- a/app/assets/stylesheets/navbar_custom.css.scss
+++ b/app/assets/stylesheets/navbar_custom.css.scss
@@ -7,6 +7,7 @@
 .navbar-ispick {
     background-color: #79CECE;//#3F3F3F;//#939393;//#F8F8F8;
     border-bottom-color: #FFFFFF;
+    border: none;
     border-radius: 0px;
 }
 /* title */
