--- a/app/views/users/boards.html.erb
+++ b/app/views/users/boards.html.erb
@@ -2,6 +2,12 @@
 <%= render 'shared/modal_image' %>
 <%= render 'shared/modal_board' %>
 
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Boards</h1>
+    </div>
+</div>
 <div class="controlls">
 <!-- Render UIs to add/edit/delete boards -->
 <%= button_group do %>
