--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,8 +1,10 @@
 @import "_colors";
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
 
+html {
+  background-color: $base-light;
+}
 body {
-  background-color: $base-pale;
   color: $base-dark;
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 16px;
