--- a/app/views/notifications_mailer/new.html.erb
+++ b/app/views/notifications_mailer/new.html.erb
@@ -1,43 +1,45 @@
 <div class="container-fluid">
-  <div class="row-fluid">
-    <div class="col-md-6 col-lg-6 about-us">
-      <br />
-      <h2>About us</h2>
-      <%= render partial: 'shared/about_us' %>
-      blog: <%= link_to 'ispick.tumblr.com', 'http://ispick.tumblr.com'.html_safe %><br />
-      twitter: <%= link_to '@ispic6', 'https://twitter.com/Ispic6'.html_safe %>
-      <br />
-      <br />
+  <div class="row">
+    <div class="col-md-12">
+      <h1>About us</h1>
+    </div>
   </div>
+  <div class="row">
+    <div class="col-md-6 col-lg-6">
+      <div class="content-box">
+        <%= render partial: 'shared/about_us' %>
+        blog: <%= link_to 'ispick.tumblr.com', 'http://ispick.tumblr.com'.html_safe %><br />
+        twitter: <%= link_to '@ispic6', 'https://twitter.com/Ispic6'.html_safe %>
+      </div>
+    </div>
 
-  <div class="col-md-5 about-us">
-    <br />
-    <h2>Contact us</h2>
+    <div class="col-md-5">
+      <div class="content-box">
+        <h2>Contact us</h2>
 
-    <%= bootstrap_form_for @message, :url => create_contact_path do |form| %>
-      <fieldset class="fields">
-        <div class="field">
-          <%= form.text_field :name %>
-        </div>
+        <%= bootstrap_form_for @message, :url => create_contact_path do |form| %>
+          <fieldset class="fields">
+            <div class="field">
+              <%= form.text_field :name %>
+            </div>
 
-        <div class="field">
-          <%= form.text_field :email %>
-        </div>
-        <div class="field">
-          <%= form.text_field :subject %>
-        </div>
+            <div class="field">
+              <%= form.text_field :email %>
+            </div>
+            <div class="field">
+              <%= form.text_field :subject %>
+            </div>
 
-        <div class="field">
-          <%= form.text_area :body, rows: '4' %>
-        </div>
-      </fieldset>
+            <div class="field">
+              <%= form.text_area :body, rows: '4' %>
+            </div>
+          </fieldset>
 
-      <fieldset class="actions">
-        <%= form.submit "Send" %>
-      </fieldset>
-    <% end %>
-    <br />
-    <br />
+          <fieldset class="actions">
+            <%= form.submit "Send" %>
+          </fieldset>
+        <% end %>
+      </div>
+    </div>
   </div>
-</div>
 </div>
