--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -1,5 +1,14 @@
 <div class="container-fluid">
-  <div class="col-md-8">
-    <%= render partial: 'shared/privacy_policy_content' %>
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Privacy Policy</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="content-box">
+        <%= render partial: 'shared/privacy_policy_content' %>
+      </div>
+    </div>
   </div>
 </div>
