--- a/app/views/pages/term_of_service.html.erb
+++ b/app/views/pages/term_of_service.html.erb
@@ -1,5 +1,14 @@
 <div class="container-fluid">
-  <div class="col-md-8">
-    <%= render partial: 'shared/term_of_service_content' %>
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Terms of Service ("Terms")</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="content-box">
+        <%= render partial: 'shared/term_of_service_content' %>
+      </div>
+    </div>
   </div>
 </div>
