Fix the color in a specific case

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -107,6 +107,11 @@ h1 {
   font-weight: 700;
 }
 
+h1.h1-description {
+  color: #FFF;
+  margin: 0px;
+}
+
 hr {
   border-top: 3px dotted $white;
 }
