--- a/app/views/shared/_top_description.html.erb
+++ b/app/views/shared/_top_description.html.erb
@@ -1,4 +1,4 @@
-<h1><strong>Ispick Beta</strong></h1>
+<h1 class="h1-description">Ispick Beta</h1>
 <p>
   Ispick is an automated anime artworks aggregation service! You can create various anime image feeds based on text tags.<br />
 This is the beta version, so please note that your user's data including favorited images and followed tags will be deleted after the next update.
