--- a/app/assets/javascripts/component.js.coffee.erb
+++ b/app/assets/javascripts/component.js.coffee.erb
@@ -3,12 +3,12 @@ class @Component
 
   # Re-position images when collapse bar is trrigered
   initCollapsables: () ->
-    $('#menu').on('hidden.bs.collapse', () ->
+    $('.navbar-collapse').on('hidden.bs.collapse', () ->
       console.log('hidden')
       window.resizing = false # Set flag to false since the method returns when the flag is true
       window.scroll.recalculatePositions()
     )
-    $('#menu').on('shown.bs.collapse', () ->
+    $('.navbar-collapse').on('shown.bs.collapse', () ->
       console.log('shown')
       window.resizing = false
       window.scroll.recalculatePositions()
