--- a/app/views/shared/_modal_image.html.erb
+++ b/app/views/shared/_modal_image.html.erb
@@ -1,5 +1,5 @@
 <div class="modal modal-images" id="modal-image" tabindex="-1" role="dialog" aria-labelledby="modal_show_image_detail" aria-hidden="true" >
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <br />
