--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -99,7 +99,10 @@ th {
 // Configure window size of modals
 .modal.modal-avatar .modal-dialog { width: 250px; }
 
-.modal.modal-images .modal-dialog { width: 800px; }
+//.modal.modal-images .modal-dialog { width: 800px; }
+@media (min-width: 800px) {
+  .modal.modal-images .modal-dialog { width: 800px; }
+}
 
 .modal.modal-boards .modal-dialog { width: 300px; }
 
