--- a/app/views/shared/_render_image.html.erb
+++ b/app/views/shared/_render_image.html.erb
@@ -2,6 +2,6 @@
   <% if image.src_url %>
     <%= link_to image_tag(image.data.url), image.src_url.html_safe, :target => "_blank" %>
   <% else %>
-    <%= image_tag image.data.url %>
-, :target => "_blank"  <% end %>
+    <%= image_tag image.data.url :target => "_blank" %>
+  <% end %>
 </div>
