Fix the caret color

--- a/app/assets/stylesheets/navbar_custom.css.scss
+++ b/app/assets/stylesheets/navbar_custom.css.scss
@@ -115,11 +115,13 @@
       a {
         .caret {
           border-top-color: $ice-soft;
+          border-bottom-color: $ice-soft;
         }
       }
       a:hover,
       a:focus {
         .caret {
+          border-top-color: $ice-light;
           border-bottom-color: $ice-light;
         }
       }
