--- a/app/views/shared/_modal_image.html.erb
+++ b/app/views/shared/_modal_image.html.erb
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <br />
-      <div id="modal-image-body" class="modal-body" style="word-wrap: break-word;">
+      <div id="modal-image-body" class="modal-body">
         <!-- render shared/_show_image.html.erb from .js.erb here -->
       </div>
     </div>
