--- a/app/views/shared/_show_image.html.erb
+++ b/app/views/shared/_show_image.html.erb
@@ -23,7 +23,7 @@
       <!-- Render Facebook share button -->
       <div class="share-button">
         <!-- We need to set the app public to use this like button -->
-        <%= like_button(CONFIG['facebook_app_id'].to_i) %>
+        <%# like_button(CONFIG['facebook_app_id'].to_i) %>
       </div>
 
       <!-- Render Pinit button -->
@@ -49,11 +49,10 @@
   <div class="clearfix visible-lg-block"></div>
   <div class="clearfix visible-md-block"></div>
   <div class="clearfix visible-sm-block"></div>
-  <br />
   <hr>
 
   <!-- Render additional image information -->
-  <div class="col-md-5">
+  <div class="col-md-10 dl-horizontal">
     <dl>
       <dt>Artist: </dt>
       <dd><%= image.artist ? image.artist : 'Unknown artist' %></dd>
@@ -81,9 +80,13 @@
     </dl>
   </div>
 
+  <div class="clearfix visible-lg-block"></div>
+  <div class="clearfix visible-md-block"></div>
+  <div class="clearfix visible-sm-block"></div>
+  <hr>
 
   <!-- Render tags associated with the image -->
-  <div class="col-md-5">
+  <div class="col-md-10">
     <%= tags_glyphicon %>
     <% image.tags.each do |tag| %>
       <%= bs_button_to tag.name, { controller: 'images', action: 'search', query: "#{tag.name}" }, class: 'btn-default btn-xs' %>
