--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -19,7 +19,7 @@
       <!-- Render the search form -->
       <%= search_form_for @search_tags, url: preferences_users_path, html: { method: :post },
         remote: true, class: "search-tags" do |f| %>
-          <h2>Search a tag to follow!</h2>
+          <h2>Search tags to follow!</h2>
           <div class="input-group">
           <%= f.text_field :name_cont, class: "form-control",  placeholder: 'Search tags' %>
 
@@ -35,13 +35,12 @@
       <li><%= link_to 'Tags used for crawling', { controller: 'users', action: 'preferences', target_words: true }, class: 'btn-default' %></li>
       <li><%= link_to 'All tags', { controller: 'users', action: 'preferences' }, class: 'btn-default' %></li>
     <% end %>
-    <br />
-    <br />-->
+    -->
   </div>
 
   <div class="row">
     <!-- Render popular tags or search result in the partial -->
-    <div class="col-md-5 col-lg-5">
+    <div class="col-md-5 col-lg-5 wrapper-popular-tags">
       <%= render partial: 'users/popular_tags', locals: { tags_result: @tags_result, popular_tags: @popular_tags } %>
     </div>
 
@@ -50,7 +49,7 @@
     </div>
 
     <!-- Render followed tags in the partial -->
-    <div class="col-md-5 col-lg-5">
+    <div class="col-md-5 col-lg-5 wrapper-followed-tags">
       <%= render partial: 'users/followed_tags', locals: { tags: @tags, test: 'test0' } %>
     </div>
   </div>
