#372 Update the twitter link

--- a/app/views/notifications_mailer/new.html.erb
+++ b/app/views/notifications_mailer/new.html.erb
@@ -9,7 +9,7 @@
       <div class="content-box">
         <%= render partial: 'shared/about_us' %>
         blog: <%= link_to 'ispick.tumblr.com', 'http://ispick.tumblr.com'.html_safe %><br />
-        twitter: <%= link_to '@ispic6', 'https://twitter.com/Ispic6'.html_safe %>
+        twitter: <%= link_to '@_ispick', 'https://twitter.com/_ispick'.html_safe %>
       </div>
     </div>
 
