#372 Show daily images when it has html requests

--- a/app/views/shared/_show_image.html.erb
+++ b/app/views/shared/_show_image.html.erb
@@ -66,7 +66,7 @@
       <dt>Page Url: </dt>
       <dd><%= link_to "#{image.page_url}", image.page_url.html_safe, :target => "_blank" if image.page_url %></dd>
 
-      <dt>Sharable Size:</dt>
+      <dt>Shareable Size:</dt>
       <dd><%= "#{image.original_width}, #{image.original_height}" %></dd>
 
       <dt>Posted At:</dt>
