--- a/app/views/shared/_top_description.html.erb
+++ b/app/views/shared/_top_description.html.erb
@@ -1,5 +1,6 @@
 <h1 class="h1-description">Ispick Beta</h1>
 <p>
-  Ispick is an automated anime artwork aggregation site, which gathers the latest pieces of artwork from the web. Have a look at fabulous artwork for your inspiration! You can also create your own anime image feeds based on text tags by signing up.<br />
-Since this is the beta version, please note that your user data including favorited images and followed tags will be deleted after the next update.
+  Ispick is an automated anime artwork aggregation site which gathers the most popular pieces of artwork from the web. Have a look at some of them for your inspiration! You can also create your own anime image feeds based on text tags after logging in.
+<br />
+Since this is the beta version, please note that your user data, including favorite images and followed tags could be deleted after the next update.
 </p>
