#372 Fix FAQ and About Us texts

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -10,7 +10,7 @@
     <div class="col-md-10 col-lg-10">
       <div class="content-box">
         <strong>What is this site?</strong><br />
-          Ispick is a website that gathers anime artwork automatically. You can browse images with the pinterest-like layout, based on RSS streams, or by simply on search result pages. Also, you can create your own image feed by registering to our site.<br />
+          Ispick is a website that gathers anime artwork automatically. You can browse and search popular images with the Pinterest-like layout. Also, you can create your own image feed by registering on our site.<br />
           If you're an original author and want to delete your works on the site, please feel free to contact us.<br /><br />
         <strong>Why does it fail to load images with infinite scroll when I browse on Chrome?</strong><br />
            This is a broser side bug and is fixed in version 40, as following stackoverflow page describes:
