--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
 
   <!-- Google analytics script -->
   <%= analytics_init if Rails.env.production? %>
+
+  <!-- Start of StatCounter Code for Default Guide -->
+  <%= javascript_include_tag 'stat_counter' if Rails.env.production? %>
+  <noscript><div class="statcounter"><a title="shopify visitor
+  statistics" href="http://statcounter.com/shopify/"
+  target="_blank"><img class="statcounter"
+  src="http://c.statcounter.com/10089559/0/da2e4b88/1/"
+  alt="shopify visitor statistics"></a></div></noscript>
+  <!-- End of StatCounter Code for Default Guide -->
+
 </head>
 <body class="no-touch">
 <div id="wrapper">
