--- a/app/views/shared/_show_image.html.erb
+++ b/app/views/shared/_show_image.html.erb
@@ -1,15 +1,33 @@
 <%= stylesheet_link_tag 'images_detail' %>
 
 <div class="container-fluid">
-  <br />
+  <div class="row"></div>
 
-  <!-- Render image's title -->
-  <div class="image-title">
+  <!-- Render image's title without html tags -->
+  <div class="row"></div>
+    <div class="image-title col-md-8 col-sm-4">
     <%= strip_tags(image.title) %>
-  </div>
+    </div>
+
+
+  <div class="clearfix visible-lg-block"></div>
+  <div class="clearfix visible-md-block"></div>
+  <div class="clearfix visible-sm-block"></div>
+
+  <!-- Render text tags associated with the image -->
+  <div class="row"></div>
+    <div class="col-md-6 col-sm-6">
+
+    <%= tags_glyphicon %>
+    <% image.tags.each do |tag| %>
+      <%= bs_button_to tag.name, { controller: 'images', action: 'search', query: "#{tag.name}" }, class: 'btn-default btn-xs' %>
+    <% end %>
+    </div>
+
+
 
   <!-- Render social sharing buttons -->
-  <div class="image-buttons" style="padding: 0px;">
+  <div class="image-buttons col-md-2">
     <div class="image-share">
 
       <!-- Render Twitter share button -->
@@ -43,8 +61,7 @@
         class: "popover-board btn-info btn btn-share" }, 'data-toggle' => "popover", 'data-placement'=>'bottom', 'data-container'=> 'body', id: "popover-board#{image.id}" if current_user %>
       </div>
     </div>
-
-  </div>
+  </div> <!-- div image-buttons -->
 
   <div class="clearfix visible-lg-block"></div>
   <div class="clearfix visible-md-block"></div>
@@ -80,16 +97,6 @@
     </dl>
   </div>
 
-  <div class="clearfix visible-lg-block"></div>
-  <div class="clearfix visible-md-block"></div>
-  <div class="clearfix visible-sm-block"></div>
-  <hr>
 
-  <!-- Render tags associated with the image -->
-  <div class="col-md-10">
-    <%= tags_glyphicon %>
-    <% image.tags.each do |tag| %>
-      <%= bs_button_to tag.name, { controller: 'images', action: 'search', query: "#{tag.name}" }, class: 'btn-default btn-xs' %>
-    <% end %>
   </div>
 </div>
