--- a/app/assets/stylesheets/images_detail.css.scss
+++ b/app/assets/stylesheets/images_detail.css.scss
@@ -1,7 +1,14 @@
 // Used on image detail modals
-.image {
-  text-align: center;
-  align: center;
+@media only screen and (min-width: 500px) {
+  .image {
+    text-align: center;
+    align: center;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .image {
+    width: 100%;
+  }
 }
 
 
