--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -4,6 +4,9 @@
 
 @import "_colors";
 
+.width {
+  visibility: hidden;
+}
 .block {
   position: absolute;
   //width: 300px;
@@ -12,7 +15,7 @@
 
 @media only screen and (max-width: 500px) {
   .block {
-    width: 300px;
+    //width: 300px;
   }
 
   .desc-box {
