--- a/app/views/users/boards_no_images.html.erb
+++ b/app/views/users/boards_no_images.html.erb
@@ -1,1 +1,1 @@
-You don't seem to have any boards. Let's create one on the <%= link_to 'home', home_users_path %> page!
+You don't seem to have any boards. Let's create one at the <%= link_to 'home', home_users_path %> page!
