--- a/app/views/users/boards.html.erb
+++ b/app/views/users/boards.html.erb
@@ -40,7 +40,7 @@
       <div class="titleBox">
         <%= button_group class: 'pull-right blocks' do %>
           <%= render_unclip_button(favored_image) %>
-          <%= render_show_favored_button(favored_image) %>
+          <%= render_show_favored_button(favored_image) unless mobile_device? %>
         <% end %>
         <br />
       </div>
